fixed positon and z-index of hero more button

--- a/htdocs/assets/css/main.css
+++ b/htdocs/assets/css/main.css
@@ -128,6 +128,25 @@ html {
   margin-bottom: 2rem;
 }
 
+/* More Button */
+.more-button {
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 3; /* Ensure the button is in front of the gradient */
+  background-color: #00B3A0;
+  border: none;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border-radius: 50px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.more-button:hover {
+  background-color: #0099CC;
+  transform: translateY(-3px);
+}
+
 /* Buttons */
 @keyframes glow {
   0% {
